--- a/Exercicio JavaScript/Exercicio 1/estilos/style.css
+++ b/Exercicio JavaScript/Exercicio 1/estilos/style.css
@@ -14,22 +14,17 @@ section {
     background-color: white;
     border-radius: 10px;
     padding: 15px;
-    width: 500px;
+    width: 700px;
     margin: auto;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.178);
 }
 div {
-    padding-top: 10px;
-}
-div#res {
+    padding: 5px;
     text-align: center;
 }
+
 footer {
+    color: white;
     text-align: center;
     font-style: italic;
 }
-img#photo {
-    display: block;
-    margin: auto;
-    padding: 10px;
-} /* #photo aqui é o id que eu coloquei pra identificar a imagem.*/
